# quasar

./: .gitignore  LICENSE  README  README.md  doc_requirements.txt  old.README.md  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
docs/: readme.txt
env/: friday.tcsh  quasar.bash  quasar.tcsh
hammer/: __init__.py
mcvqe/: __init__.py  aiem_data.py  mcvqe.py  mcvqe_api.py
notebooks/: QFD_circuits.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled10.ipynb  Untitled11.ipynb  Untitled12-Copy1.ipynb  Untitled12.ipynb  Untitled13.ipynb  Untitled15.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  Untitled6.ipynb  Untitled7.ipynb  Untitled9.ipynb  complaints.ipynb  demo.ipynb  fixes.ipynb  index.ipynb  partial-demo.ipynb  quasar-backend.ipynb  quasar-basic-ghz-wn.ipynb  quasar-circuit-composition.ipynb  quasar-custom-gates.ipynb  quasar-demo.ipynb  quasar-derivatives.ipynb  quasar-gate-library.ipynb  quasar-mark1-mark2.ipynb  quasar-measurement.ipynb  quasar-parameters.ipynb  quasar-pauli.ipynb  quasar-qml-additions.ipynb  sandbox-printing.ipynb
qaoa/: __init__.py  qaoa.py
qfd/: __init__.py  qfd.py
quasar/: README  TODO  __init__.py  algebra.py  autocircuit.py  autogate.py  backend.py  circuit.py  cirq_backend.py  davidson.py  derivatives.py  forest_backend.py  format.py  index_allocator.py  indexallocator.py  ionq_backend.py  jobsummary.py  measurement.py  observable.py  old_measurement.py  old_tomography.py  optimizer.py  options.py  parameters.py  pauli.py  pauli_old.py  pyquil_backend.py  qiskit_backend.py  resolution.py  (+5 more)
(+328 files in other folders)
