[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "quasar"
dist-name = "qcware-quasar"
author = "Rob Parrish"
author-email = "rob.parrish@qcware.com"
home-page = "http://github.com/qcware/quasar"
description-file="README.md"
classifiers = [
	    "License :: OSI Approved :: Apache Software License",
	    "Programming Language :: Python :: 3",
	    "Operating System :: OS Independent",
	    ]
requires = [
	 "numpy >= 1.18.4",
	 "scipy >= 1.3.3",
	 "sortedcontainers>=2.3.0"
]

[tool.flit.metadata.requires-extra]
qiskit = ["qiskit-aer >= 0.5.1"]
cirq = ["cirq == 0.5.0"]
pyquil = ["pyquil==2.16.0"]
ionq = ["requests >= 2.22.0"]
test = ["hypothesis[numpy] >= 6.8.0"]